manifests/readiness/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: readiness
  name: readiness
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
  selector:
    app: readiness
  type: LoadBalancer
