manifests/readiness/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readiness
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: lrcsdp.support.cf-cd.com
      http:
        paths:
          - path: /rd(/|$)(.*)
            backend:
              service:
                name: readiness
                port:
                  number: 80
            pathType: Prefix
